--- a/defaultffp/Properties/Resources.resx
+++ b/defaultffp/Properties/Resources.resx
@@ -112,15 +112,21 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="FIREFOX_IS_ALREADY_RUNNING" xml:space="preserve">
     <value>Firefox is already running, do you want to kill them?</value>
   </data>
   <data name="FIREFOX_NOT_FOUND" xml:space="preserve">
     <value>Firefox.exe not found</value>
+  </data>
+  <data name="NO_ITEM_SELCTED" xml:space="preserve">
+    <value>No items selected</value>
+  </data>
+  <data name="PROFILE_NOT_FOUND" xml:space="preserve">
+    <value>Profile "{0}" not found</value>
   </data>
 </root>
